--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,12 @@ body{
 }
 .nav-bar{
     flex: 1;
-    justify-content: space-between;
     margin-left: 20px;
+    
+
 }
 .nav-links{
     font-size: large;
-    margin-right: 0px;
     
 
 }
@@ -47,7 +47,7 @@ body{
     list-style: none;
     width: 500px;
     display: flex;
-    justify-content: space-between;
+    
 }
 .ladoderecho form label {
     text-align: center;
@@ -58,7 +58,6 @@ body{
     margin: 30px auto;
     background-color:white;
     display: flex;
-    justify-content: space-around;
     
 }
 .caja1, .caja2, .caja3{
@@ -115,7 +114,7 @@ footer{
     width: 1000px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     border: 1px solid black;
     background-color: whitesmoke;
     height: 100px;
