--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ body{
     flex:1;
     margin-right: 20px; 
     text-align: center;
+    border-radius: 20px;
 
 }
 .caja4{
@@ -76,6 +77,7 @@ body{
     height: 300px;
     background-color: whitesmoke;
     text-align: center;
+    border-radius: 20px;
 }
 .imgclima{
     width: 100px;
@@ -125,10 +127,11 @@ footer{
     background-color: cornflowerblue;
     cursor:pointer;
     box-shadow: 6px 8px 7px 0px rgba(47, 49, 50, 0.74);
-    margin-right: 10px;
+    margin-right: 30px;
+
 }
-.cookie img{
-    margin: 20px;
+.cookie .cookieimg{
+    margin-left: 10px;
 }
 .cookie button:active{
     background-color: aquamarine;
